--- a/styles/main.scss
+++ b/styles/main.scss
@@ -12,3 +12,12 @@
   background-color: var(--bd-callout-bg, var(--bs-gray-100));
   border-left: 0.25rem solid var(--bd-callout-border, var(--bs-gray-300));
 }
+
+/* For SVG custom icons in G6 toolbar */
+.icon {
+  width: 1em;
+  height: 1em;
+  vertical-align: -0.15em;
+  fill: currentColor;
+  overflow: hidden;
+}
